# openfisca-france-entreprises

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  lint-files.sh  test-api.sh
.github/workflows/: build.yml  deploy.yml  validate.yml
docs/: HARDCODED_PARAMETERS_AUDIT.md  VECTORISATION_FORMULAS.md
openfisca_france_entreprises/: __init__.py  entities.py
openfisca_france_entreprises/parameters/energies/: index.yaml
openfisca_france_entreprises/parameters/energies/bouclier_tarifaire/: entreprises.yaml  index.yaml  majoration_tccfe_maximum.yaml  majoration_tccfe_minimum.yaml  menages.yaml
openfisca_france_entreprises/parameters/energies/charbon/: index.yaml  taux_reduit_concurrence_internationale.yaml  taux_reduit_seqe.yaml  ticc.yaml
openfisca_france_entreprises/parameters/energies/electricite/: cspe.yaml  index.yaml
openfisca_france_entreprises/parameters/energies/gaz_naturel/: cspg.yaml  ctssg.yaml  index.yaml  taux_reduit_concurrence_internationale.yaml  taux_reduit_seqe.yaml
openfisca_france_entreprises/parameters/energies/seuils_seqe/: intensite_production_min.yaml  intensite_valeur_ajoutee_min.yaml  part_facture_energie_chiffre_affaires_min.yaml  part_taxe_valeur_ajoutee_min.yaml
openfisca_france_entreprises/parameters/impots_societes/prelevement_exceptionnel_hydrocarbures/: seuil_chiffre_affaires.yaml  taux.yaml
openfisca_france_entreprises/parameters/taxation_energies/: natural_gas.yaml
openfisca_france_entreprises/reforms/: __init__.py
openfisca_france_entreprises/reforms/examples/: example_add_dynamic_variable.py  example_flat_income_tax.py  example_modify_income_tax.py
openfisca_france_entreprises/situation_examples/: __init__.py  couple.json  single.json
openfisca_france_entreprises/tests/autres_variables/: test_naf.yaml  test_risque_de_fuite_carbone_eta.yaml  test_tdcfe_taux.yaml
openfisca_france_entreprises/tests/autres_variables/variables_economiques/: test_valeur_ajoutee.yaml
openfisca_france_entreprises/tests/bilan/actif/: actif.yaml  actif_circulant.yaml
openfisca_france_entreprises/tests/bilan/passif/: passif.yaml
openfisca_france_entreprises/tests/examples/: example_basic_income.yaml  example_disposable_income.yaml
openfisca_france_entreprises/tests/variables_economiques/: test_valeur_ajoutee.yaml
openfisca_france_entreprises/variables/: __init__.py  boulier_tarifaire.py  caracteristiques_etablissement.py  caracteristiques_unite_legale.py  naf.py  variables_economiques.py
openfisca_france_entreprises/variables/compte_resultat/: __init__.py  charges_exceptionnelles.py  charges_exploitation.py  charges_financieres.py  operations_en_commun.py  produits_exceptionnels.py  produits_exploitation.py  produits_financiers.py  renvois.py  resultats.py
openfisca_france_entreprises/variables/consommation_energie/: __init__.py  autres_produits.py  charbon.py  electricite.py  energies.py  gaz_naturel.py
openfisca_france_entreprises/variables/examples/: example_demographics.py  example_housing.py  example_income.py  example_stats.py
openfisca_france_entreprises/variables/subventions/: example_subsidies.py
openfisca_france_entreprises/variables/taxes/: __init__.py  example_taxes.py  formula_helpers.py  impots_societes.py
openfisca_france_firms/: __init__.py  entities.py
openfisca_france_firms/parameters/energy/: natural_gas.yaml
openfisca_france_firms/parameters/taxation_energies/: natural_gas.yaml
openfisca_france_firms/reforms/: add_dynamic_variable.py  add_new_tax.py  flat_social_security_contribution.py
openfisca_france_firms/reforms/examples/: example_add_dynamic_variable.py  example_add_new_tax.py  example_flat_income_tax.py  example_removal_basic_income.py
openfisca_france_firms/situation_examples/: couple.json  housing.json  single.json
openfisca_france_firms/tests/: basic_income.yaml  disposable_income.yaml  example_age.yaml  example_basic_income.yaml  example_disposable_income.yaml  example_housing_allowance.yaml  housing_allowance.yaml  social_security_contribution.yaml
openfisca_france_firms/tests/consommation_energie/: gaz_naturel.yaml
openfisca_france_firms/tests/examples/: example_housing_allowance.yaml
openfisca_france_firms/tests/reforms/: add_dynamic_variable.yaml  add_new_tax.yaml  example_modify_income_tax.yaml  example_test_add_new_tax.yaml  modify_social_security_taxation.yaml
openfisca_france_firms/tests/situations/: example_income_tax.yaml  example_parenting_allowance.yaml  income_tax.yaml  parenting_allowance.yaml
openfisca_france_firms/variables/: __init__.py  benefits.py  caracteristiques_etablissement.py  caracteristiques_unite_legale.py  demographics.py  establishment_characteristics.py  example_stats.py  firm_characteristics.py  housing.py  income.py  stats.py  taxes.py
openfisca_france_firms/variables/bilan/actif/: actif.py  (+4 more)
openfisca_france_firms/variables/compte_resultat/: charges_exceptionnelles.py  charges_exploitation.py  charges_financieres.py  operations_en_commun.py  produits_exceptionnels.py  produits_exploitation.py  produits_financiers.py  renvois.py  resultats.py
openfisca_france_firms/variables/consommation_energie/: charbon.py  energies.py  gaz_naturel.py
openfisca_france_firms/variables/energy_consumption/: coal.py  energy.py  natural_gas.py
openfisca_france_firms/variables/examples/: example_demographics.py  example_housing.py  example_income.py  example_stats.py
openfisca_france_firms/variables/profits_losses/: operations_en_commun.py  produits_exceptionnels.py  produits_exploitation.py  resultats.py
openfisca_france_firms/variables/subsidies/: example_subsidies.py
openfisca_france_firms/variables/subventions/: example_subsidies.py
openfisca_france_firms/variables/taxes/: corporate_income_taxes.py  energy_taxes.py  example_taxes.py  impots_societes.py  taxes_energies.py
scripts/: add_docstrings.py  create_pr.sh  dedup_parameter_dates.py  generate_tccfe_coefficient_yaml.py  replace_model_api_star_imports.py
(+376 files in other folders)
