[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[project]
name = "openfisca_france_entreprises"
version = "1.1.0"
description = "OpenFisca Rules as Code model for France UniteLegales."
readme = "README.md"
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code"]
authors = []
maintainers = []
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "openfisca-core[web-api] >=43.3.8, <44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "ruff>=0.6.9,<1",
    "yamllint>=1.35.1",
]
# Note: uv uses dependency-groups, so dev dependencies are also listed there

[project.urls]
Homepage = "git://github.com/pzuldp/openfisca-france-entreprises.git"
Repository = "git://github.com/pzuldp/openfisca-france-entreprises.git"
Documentation = "https://openfisca.org/doc"
Issues = "git://github.com/pzuldp/openfisca-france-entreprises.git/issues"
Changelog = "git://github.com/pzuldp/openfisca-france-entreprises.git/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["openfisca_france_entreprises", "openfisca_france_entreprises.*"]

[tool.ruff]
target-version = "py311"
format.docstring-code-line-length = 72
format.docstring-code-format = true
# format.quote-style = "single"
lint.select = ["ALL"]
lint.ignore = [
    "ANN",
    "ARG002",  # Unused method arguments (common in OpenFisca formulas)
    "COM812",
    "D100",
    "D101",
    "D102",
    "D104",
    "D107",
    "D212",
    "E402",
    "ICN001",
    "INP001",
    "N803",
    "PGH004",
    "PIE794",  # Duplicate class field (reference field in variables)
    "RET504",
    "RUF100",
    "E501",
    "ERA001",
    "F403",
    "F405",
    "FIX002",
    "ISC001",
    "N801",
    "N805",
    "N806",
    "PLR0913",
    "PLR2004",
    "PTH100",
    "PTH118",
    "PTH120",
    "PTH123",
    "RUF001",
    "RUF003",
    "RUF012",
    "S101",
    "SLF001",
    "TD002",
    "TD003",
]
lint.pydocstyle.convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["openfisca_france_entreprises"]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
addopts = "--exitfirst --showlocals --doctest-modules --disable-warnings --import-mode importlib"
testpaths = ["openfisca_france_entreprises/tests"]
python_files = "**/*.py"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore:function ham() is deprecated:DeprecationWarning",
]

[tool.uv.sources]
openfisca_france_entreprises = { workspace = true }

[dependency-groups]
dev = [
    "openfisca_france_entreprises",
    "pytest>=8.3.2",
    "ruff>=0.6.9,<1",
    "yamllint>=1.35.1",
]
