[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[project]
name = "openfisca_france_entreprises"
version = "1.1.2"
description = "OpenFisca Rules as Code model for France UniteLegales."
readme = "README.md"
keywords = ["microsimulation", "tax", "benefit", "rac", "rules-as-code"]
authors = []
maintainers = []
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "openfisca-core[web-api] >=44",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.3.2",
    "ruff>=0.6.9,<1",
    "yamllint>=1.35.1",
]
# Note: uv uses dependency-groups, so dev dependencies are also listed there

[project.urls]
Homepage = "git://github.com/pzuldp/openfisca-france-entreprises.git"
Repository = "git://github.com/pzuldp/openfisca-france-entreprises.git"
Documentation = "https://openfisca.org/doc"
Issues = "git://github.com/pzuldp/openfisca-france-entreprises.git/issues"
Changelog = "git://github.com/pzuldp/openfisca-france-entreprises.git/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["openfisca_france_entreprises", "openfisca_france_entreprises.*"]

[tool.ruff]
target-version = "py311"
line-length = 120  # Increased from default 88 to accommodate long URLs and parameter paths
exclude = ["scripts"]  # Dev utilities, not part of the package; excluded from lint
format.docstring-code-line-length = 72
format.docstring-code-format = true
# format.quote-style = "single"
lint.select = ["ALL"]
lint.ignore = [
    "ANN",     # Type annotations (not enforced in this codebase)
    "ARG002",  # Unused method arguments (common in OpenFisca formulas: entity, period, parameters)
    "ERA001",  # Commented-out code (many instances, cleanup needed)
    "FIX002",  # TODO comments (acceptable in codebase)
    "N801",    # Class name should use CapWords (Variable subclasses use lowercase names)
    "N803",    # Argument name should be lowercase (OpenFisca convention: UniteLegale, Etablissement)
    "N805",    # First argument of a method should be `self` (formulas use entity name)
    "N806",    # Variable in function should be lowercase (some uppercase in formulas)
    "PLR0913", # Too many arguments (formulas often have many parameters)
    "SLF001",  # Private member access (e.g. _leading_underscore)
]
lint.pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# No docstrings for Variable/Enum classes (D101) or formula methods (D102):
# variables are documented via label, formulas are self-explanatory.
"openfisca_france_entreprises/variables/**/*.py" = ["D101", "D102"]

[tool.ruff.lint.isort]
known-first-party = ["openfisca_france_entreprises"]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
addopts = "--exitfirst --showlocals --doctest-modules --disable-warnings --import-mode importlib"
testpaths = ["openfisca_france_entreprises/tests"]
python_files = "**/*.py"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore:function ham() is deprecated:DeprecationWarning",
]

[tool.uv.sources]
openfisca_france_entreprises = { workspace = true }

[dependency-groups]
dev = [
    "openfisca_france_entreprises",
    "pre-commit>=4.0.0",
    "pytest>=8.3.2",
    "ruff>=0.6.9,<1",
    "yamllint>=1.35.1",
]
